--- a/O5/Latex/Analisi.tex
+++ b/O5/Latex/Analisi.tex
@@ -65,7 +65,8 @@ quindi come si può evincere sia dai dati ottenuti che dall'analisi del grafico 
 \subsection{Intensità in funzione della lunghezza}
 
 In questa sezione invece ci proponiamo di verificare se $I_0$ risulta essere compatibile col valore di $I\ped{0\ped{exp}}$ che troveremo dall'analisi dati. L'unica differenza rispetto alla procedura di analisi vista precedentemente è che in questo caso la variabile dell'equazione (\ref{eq:inutile}) è $L$ lo spessore del contintore della sostanza e non la concentrazione molare, che in questo caso è costante.
-Per questa parte dell'analisi dati abbiamo che il valore dell'intensita $I_0$ ha valore di: $I_0 \,=\, 111 \pm 1$
+Per questa parte dell'analisi dati abbiamo che $I_0$ ha valore di: $I_0 \,=\, 111 \pm 1$.
+
 Quindi otteniamo che:
 
 \begin{equation}
@@ -86,6 +87,8 @@ pertanto i valori di $I\ped{0\ped{exp}}$ e $kc$ risultano essere:
 \end{equation}
 %
 e come si può notare anche in questo caso i valori di $I_0$ e $I\ped{0\ped{exp}}$  risultano essere compatibili entro i loro errori sperimentali (infatti sono uguali).
+
+Pertanto possiamo dire di aver verificato la legge di Lambert-Beer.
 
 \begin{figure}[hbtp]
         \centering
