--- a/O5/Latex/Materiale.tex
+++ b/O5/Latex/Materiale.tex
@@ -1,8 +1,10 @@
+\vspace{-0.3cm}
+
 \section{Materiale a disposizione:}
 
 Per questa esperienza di laboratorio il materiale a disposizione è stato il seguente:
-\begin{itemize}
-	\item{Due cilindri graduati da 10 $\si{\milli\litre}$ con risoluzione da 1 $\si{\milli\litre}$;}
+\begin{itemize} \itemsep2pt \parskip0pt 
+	\item{Due cilindri graduati da 10 $\si{\milli\litre}$ con risoluzione da 0.1 $\si{\milli\litre}$;}
     \item{Un beaker contenente acqua distillata;}
 	\item{5 contenitori trasparenti e una base in polistirolo;}
 	\item{Due pipette Pasteur, o contagocce;}
