--- a/O5/Latex/Procedimento.tex
+++ b/O5/Latex/Procedimento.tex
@@ -1,22 +1,31 @@
+\vspace{-0.5cm}
 
 \section{Procedimento}
 
 \subsection{Preparazione della soluzione}
 
-Partendo da $2\,\,\si{\milli\litre}$ di soluzione uno molare di CuSO$_4$ a nostra disposizione abbiamo creato 4 soluzioni con diversa concentrazione (0.5, 0.25, 0.125, 0.0625 \si{\mol\per\litre}) grazie alla seguente formula:
+\begin{wrapfigure}{r}{76mm}
+    \vspace{-15mm}
+    \begin{center}
+        \includegraphics[width=74mm]{chem_dog.pdf}
+    \end{center}
+    \vspace{-5mm}
+\end{wrapfigure}
+
+Partendo una soluzione uno molare di CuSO$_4$ abbiamo preparato 4 soluzioni con diversa concentrazione (0.5, 0.25, 0.125, 0.0625 \si{\mol\per\litre}) grazie alla seguente formula:
 
 \begin{equation}
 	C_f \,\, = \,\, C_i \,\, \frac{V_i}{V_f}
 	\label{eq:proporzione}
 \end{equation}
-%
+
 dove $C_f$ è la concentrazione molare finale della soluzione, $C_i$ è la concentrazione molare iniziale della soluzione, $V_i$ è il volume iniziale della soluzione mentre $V_f$ è il volume finale della soluzione.
 
 In questa esperienza siamo partiti da una soluzione a concentrazione uno molare di CuSO$_4$ che mano mano abbiamo diluito,
-dimezzando ogni volta la concentrazione. In questo modo la procedura è molto semplice anche se un po' monotona.
-Abbiamo seguito questo semplice procedimento, partendo da \SI{2}{\milli\litre} di uno molare:
+dimezzando ogni volta la concentrazione. In questo modo la procedura è molto semplice;
+il procedimento è il seguente, partendo da \SI{2}{\milli\litre} di uno molare:
 
-\begin{itemize}
+\begin{itemize} \itemsep2pt \parskip0pt
 	\item{Da \SI{2}{\milli\litre} di soluzione di partenza abbiamo diluito aggiungendo \SI{2}{\milli\litre} di acqua distillata.
 	    Il volume finale della soluzione è quindi \SI{4}{\milli\litre} e la concentrazione è dimezzata (come si vede usando la formula
 	    (\ref{eq:proporzione}));}
@@ -30,7 +39,7 @@ Alla fine abbiamo ottenuto quattro contenitori trasparenti con al loro interno \
 Inoltre ogni gruppo ha creato una soluzione con concentrazione molare tra 1 e 0.5.
 Il nostro gruppo aveva l'incarico di preparare la soluzione 0.75 molare, che abbiamo preparato
 grazie all'equazione (\ref{eq:proporzione}). In questo caso siamo partiti con
-$1.5\,\,\si{\milli\litre}$ di soluzione uno molare e abbiamo aggiunto \SI{1}{\milli\litre} di acqua distillata. 
+$1.5\,\,\si{\milli\litre}$ di soluzione uno molare. Dalla (\ref{eq:proporzione}):
 
 \begin{equation*}
 	V_f \,\, = \,\, V_i \,\, \frac{C_i}{C_f} \,\, = \,\, 1.5 \si{\milli\litre} \,\, \frac{1 \,\, \si{\mole\per\litre}}{0.75 \,\, \si{\mole\per\litre}} \,\, = \,\, 2 \,\, \si{\milli\litre}
@@ -44,55 +53,47 @@ La soluzione ricavata è stata interamente versata nell'ultimo contenitore trasp
 Come prima operazione abbiamo misurato l'intensità iniziale del raggio laser ($I_0$) senza alcun ostacolo tra la sorgente e il misuratore di intensità. Abbiamo ottenuto il seguente valore:
 
 \begin{equation*}
-	I\ped{0\ped{1}} \,\,=\,\, 130 \pm 1 \,\,\, \si{\joule} \,\, ??
+	I\ped{0\ped{1}} \,\,=\,\, 130 \pm 1 \,\,\, \text{Picodontotricotteri}^\frac{11}{7.5} \footnote{L'unita di misura
+	    Picodontotricotteri$^\frac{11}{7.5}$, multiplo dell'unità base del sistema internazionale (SI) il Picodontotricottero$^\frac{11}{11}$,
+	    verrà in seguito indicata con l'abbreviazione rPdtc ovvero rudolfPicodontotricotteri. Abbiamo impiegato questa unità poiché
+	    non siamo a conoscenza dell'unità di misura dei dati che abbiamo preso. http://nonciclopedia.wikia.com/wiki/Ventordici}
 \end{equation*}
 %
-Quindi abbiamo misurato per ogni concentrazione di CuSO$_4$ l'intensità luminosa finale ($I_f$) del raggio laser. Abbiamo eseguito questa misura non solo sulle quattro concentrazioni da noi fatte ma anche su quelle comuni a tutti i gruppi, ovvero quelle comprese tra 1 e 0.5 molare. I valori da noi ottenuti sono riportati nella tabela seguente, Tabella \ref{tab:dati}.
+Quindi abbiamo misurato, per ogni concentrazione preparata, l'intensità luminosa finale ($I_f$) del raggio laser dopo che esso aveva attraversato la soluzione. Abbiamo eseguito questa misura non solo sulle quattro concentrazioni da noi fatte ma anche su quelle comuni a tutti i gruppi, ovvero quelle comprese tra 1 e 0.5 molare. I valori da noi ottenuti sono riportati nella Tabella \ref{tab:dati}.
 Infine abbiamo misurato nuovamente il valore dell'intensità luminosa del raggio laser a vuoto. Abbiamo ottenuto un valore di:
 
 \begin{equation*}
-	I\ped{0\ped{2}} \,\,=\,\, 131 \pm 1 \,\,\, \si{\joule} \,\, ??
+	I\ped{0\ped{2}} \,\,=\,\, 131 \pm 1 \,\,\, \text{rPdtc}
 \end{equation*}
 %
-Questa seconda misura ci serve per accertarci che l'apparato durante tutte le misure sia rimasto, nei limiti del possibile, stabile. Infatti se le due intensità luminose fossero state troppo diferenti tra di loro si sarebbe dovuta ripetere l'intera procedura di misura. Per fortuna le due misure risultano compatibili entro le loro incertezze, quindi i dati ottenuti sono validi e possiamo procedere ad analiizzarli.
+Questa seconda misura ci serve per accertarci che l'apparato durante tutte le misure sia rimasto, nei limiti del possibile, stabile. Infatti se le due intensità luminose fossero state troppo diferenti tra di loro si sarebbe dovuta ripetere l'intera procedura di misura. Per fortuna le due misure risultano compatibili entro le loro incertezze, quindi i dati ottenuti sono validi e possiamo procedere ad analizzarli.
 
-\begin{table}[t!]
+\begin{SCtable}[1.5]
     \centering
-    \begin{tabular}{c c }
-        \toprule
-         Concentrazione molare $[\si{\mole\per\litre}]$ & Intensità $I_f \,\, [\si{\joule}]$ \\
+    \small
+    \begin{tabular}{c c | c c}
+        C $[\si{\mole\per\litre}]$ & $I_f \, [\text{rPdtc}]$ & $L [\si{\milli\m}]$ & $I_f \, [\text{rPdtc}]$ \\
         \midrule
-		$1$ 	& $7 \pm 1$ \\
-		$0.9$ 	& $10 \pm 1$ \\       
-        $0.8$ 	& $13 \pm 1$ \\
-        $0.75$ 	& $14 \pm 1$ \\
-        $0.7$ 	& $17 \pm 1$ \\
-        $0.65$ 	& $20 \pm 1$ \\
-        $0.6$ 	& $22 \pm 1$ \\
-        $0.5 \pm 0.014$ 	& $26 \pm 1$ \\
-        $0.25 \pm 0.01$ 	& $49 \pm 1$ \\
-        $0.125 \pm 0.006$ & $74 \pm 1$ \\
-        $0.0625 \pm 0.003$ & $91 \pm 1$ \\
+        $1$ 	& $7 \pm 1$               &  0                & 111 $\pm$ 1                 \\
+        $0.90 \pm 0.01$ 	& $10 \pm 1$              &  20 $\pm$ 0.5     & 54 $\pm$ 1                    \\        
+        $0.80 \pm 0.01$ 	& $13 \pm 1$              &  25 $\pm$ 0.5     & 46 $\pm$ 1                    \\
+        $0.75 \pm 0.01$ 	& $14 \pm 1$              &  30 $\pm$ 0.5     & 42 $\pm$ 1                    \\
+        $0.70 \pm 0.01$ 	& $17 \pm 1$              &  35 $\pm$ 0.5     & 31 $\pm$ 1                      \\
+        $0.65 \pm 0.01$ 	& $20 \pm 1$              &  40 $\pm$ 0.5     & 27 $\pm$ 1                    \\
+        $0.60 \pm 0.01$ 	& $22 \pm 1$              &  50 $\pm$ 0.5     & 16 $\pm$ 1                    \\
+        $0.50 \pm 0.01$ 	& $26 \pm 1$  &  60 $\pm$ 0.5     & 16 $\pm$ 1                    \\
+        $0.25 \pm 0.01$ 	& $49 \pm 1$  &  70 $\pm$ 0.5     & 12 $\pm$ 1                      \\
+        $0.125 \pm 0.006$ & $74 \pm 1$      && \\
+        $0.0625 \pm 0.003$ & $91 \pm 1$     && \\
         \bottomrule
     \end{tabular}
-    \caption{In questa tabella sono riportati sulla prima colonna i valori della concentrazione molare di solfato di rame (CuSO$_4$) che siamo andati ad analizzare man mano. Sulla seconda colonna sono riportati i valori dell'intensità luminosa ($I_f$) in uscita dalla provetta contenente la soluzione. Ricordiamo che la soluzione 1 molare è stata presa senza errore. E' imprtante notare che gli errori sulle concetrazioni non sono uniformi in quanto ogni concentrazione (a scendere) è stata ottenuta da quella precedente, pertanto l'inceretezza si propaga. Infine facciamo notare che l'incertezza è stata inserita soltanto per le concentrazioni ottenute dalla procedura descritta ad inizio paragrafo, mentre alle concentrazioni condivise dai vari gruppi si è deciso di non attribuire alcun'errore.}
+    \caption{La tabella riporta tutti i dati misurati. Nella prima colonna i valori della concentrazione molare di solfato di rame (CuSO$_4$) che abbiamo usato. Nella seconda colonna sono riportati i valori dell'intensità luminosa in uscita dalla provetta contenente la soluzione. La soluzione 1 molare è stata considerata senza errore. E' imprtante notare che gli errori sulle concentrazioni non sono uguali in quanto ogni concentrazione (a scendere) è stata ottenuta da quella precedente, pertanto l'inceretezza si somma recursivamente. L'incertezza scende in valor assoluto ma sale (ovviamente) l'incertezza relativa. L'incertezza sulle concentrazioni 0.9-0.6 (ad esclusione della 0.75) non possono essere calcolate in quanto non sappiamo come sono state diluite le soluzione. Abbiamo stimato un incertezza plausibile.}
     \label{tab:dati}
-\end{table}
-%
+\end{SCtable}
+
 Inoltre abbiamo anche misurato l'intensità del raggio laser quando la soluzione era composta interamente da acqua distillata e abbiamo ottenuto il seguente valore:
 
 \begin{equation}
-	I\ped{H_2O} \,\,=\,\, 114 \pm 1 \,\,\, \si{\joule}
+	I\ped{H_2O} \,\,=\,\, 114 \pm 1 \,\,\, \text{rPdtc}
 	\label{eq:acqua}
 \end{equation}
-%
-Infine abbiamo misurato, col calibro (???), la larghezza del contenitore nel quale viene posta la soluzione. Il suo valore risulta essere il seguente:
-
-\begin{equation*}
-	L \,\,=\,\, XXX \pm XXX
-\end{equation*}
-
-\begin{figure}[hbtp]
-        \centering
-        \includegraphics[scale=0.43]{doge.pdf}
-\end{figure}
