--- a/O5/Latex/Relazione.tex
+++ b/O5/Latex/Relazione.tex
@@ -2,13 +2,14 @@
 \usepackage[italian]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage{amsmath}
-\usepackage{fullpage}
+\usepackage[cm]{fullpage}
 \usepackage{graphicx}
 \usepackage{booktabs}
 \usepackage{wrapfig}
 \usepackage{multirow}
 \usepackage{sidecap}
 \usepackage{siunitx}
+\usepackage{array}
 \usepackage[font=small]{caption}
 \usepackage[bookmarks, hidelinks]{hyperref}
 \usepackage{float}
