--- a/O5/Latex/Titolo.tex
+++ b/O5/Latex/Titolo.tex
@@ -2,13 +2,14 @@
         \includegraphics[width=10mm]{beer.pdf}
      	{\huge \; Legge di Lambert-Beer \;}
      	\includegraphics[width=10mm]{beer.pdf}
-    \vspace{0.5cm}
+    \vspace{0.1cm}
 
-      	{\large Francesco Pasa, Davide Bazzanella, Andrea Miani} \\
+      	{Francesco Pasa, Davide Bazzanella, Andrea Miani} \\
       	{Bazzanella.Davide@gmail.com} \\
-		{\large Gruppo A6} \\
+		{Gruppo A6} \\
 	
-	\vspace{0.2cm}
-      	{\large 9 dicembre 2013}
+	\vspace{0.1cm}
+      	{9 dicembre 2013}
+    \vspace{-0.2cm}
 
 \end{center}
