--- a/O5/Latex/Analisi.tex
+++ b/O5/Latex/Analisi.tex
@@ -57,7 +57,7 @@ otteniamo che i valori di $I\ped{0}$ e di $kL$ sono i seguenti:
 Quindi il valore delle due intensità $I_0$ e $I\ped{0\ped{exp}}$ risultano essere compatibili entro i loro errori sperimentali. Come si può evincere sia dai dati ottenuti che dall'analisi del grafico in Figura (\ref{fig:g1}) i risultati sono buoni.
 
 \begin{SCfigure}
-    \includegraphics[width=135mm]{g1.pdf}
+    \includegraphics[width=130mm]{g1.pdf}
     \caption{I punti indicano i dati che abbiamo misurato, mentre la linea rappresenta il fit eseguito su di essi.
         Le barre d'errore sono piccole ma visibili (poco più grandi dei punti). Il chi quadro è compatibile entro poco più di un sigma
         con il suo valore teorico. In definitiva la legge ricavata è soddisfacente ed è in buon accordo con i dati.}
@@ -73,24 +73,25 @@ cioè quando $L = 0$.
 Come nella precedente, in questa sezione ci proponiamo di verificare se $I_{0\ped{exp}}$ risulta essere compatibile col valore di $I\ped{0}$ che troveremo dall'analisi dati. L'unica differenza è che in questo caso la variabile dell'equazione (\ref{eq:intensita}) è $L$, cioè lo spessore del contenitore della sostanza. La concentrazione molare in questo caso è stata mantenuta costante.
 
 Quindi, in maniera analoga a prima, otteniamo che:
-
+\vspace{-1mm}
 \begin{equation}
 	\log{I_f} \,\,=\,\, A \,-\, B \, L \qquad \text{dove} \qquad A \,=\, \log{I_0} \quad \text{e} \quad B\,=\, kc
 \end{equation}
 
 I valori trovati dalla procedura di fit sulla relazione soprariportata sono:
 
-\begin{center}
-\vspace{-2mm}
-\begin{tabular}{c c}
-	$A \,=\, 4.73 \pm 0.02$ & $B \,=\, 0.037 \pm 0.001$ \\
-	$I\ped{0} \,=\, 113 \pm 3$ & $kL = B \,=\, 0.037 \pm 0.001$ \\
-\end{tabular}
-\vspace{-2mm}
-\end{center}
+\begin{equation*}
+	A \,=\, 4.73 \pm 0.02 \qquad \text{e} \qquad B \,=\, 0.037 \pm 0.001
+\end{equation*}
+
+Da cui si ottengono:
+
+\begin{equation}
+	I\ped{0} \,=\, 113 \pm 3 \;\, \text{rPdtc} \qquad \text{e} \qquad kc = B \,=\, 0.037 \pm 0.001
+\end{equation}
 
 \begin{SCfigure}[1][b!]
-    \includegraphics[width=135mm]{g2.pdf}
+    \includegraphics[width=130mm]{g2.pdf}
     \caption{I punti sperimentali e la legge da essi ricavata sono soddisfacenti. Le incertezze sono piccole (appena visibili),
         tuttavia il chi quadro è compatibile con il suo valore teorico.}
     \label{fig:g2}
