--- a/O5/Latex/Procedimento.tex
+++ b/O5/Latex/Procedimento.tex
@@ -53,9 +53,9 @@ La soluzione ricavata è stata interamente versata nell'ultimo contenitore trasp
 Come prima operazione abbiamo misurato l'intensità iniziale del raggio laser ($I_0$) senza alcun ostacolo tra la sorgente e il misuratore di intensità. Abbiamo ottenuto il seguente valore:
 
 \begin{equation*}
-	I\ped{0\ped{1}} \,\,=\,\, 130 \pm 1 \,\,\, \text{Picodontotricotteri}^\frac{11}{7.5} \footnote{L'unita di misura
-	    Picodontotricotteri$^\frac{11}{7.5}$, multiplo dell'unità base del sistema internazionale (SI) il Picodontotricottero$^\frac{11}{11}$,
-	    verrà in seguito indicata con l'abbreviazione rPdtc ovvero rudolfPicodontotricotteri. Abbiamo impiegato questa unità poiché
+	I\ped{0\ped{1}} \,\,=\,\, 130 \pm 1 \,\,\, \text{Picodontetricotteri}^\frac{11}{7.5} \footnote{L'unita di misura
+	    Picodontetricotteri$^\frac{11}{7.5}$, multiplo dell'unità base del sistema internazionale (SI) il Picodontetricottero$^\frac{11}{11}$,
+	    verrà in seguito indicata con l'abbreviazione rPdtc ovvero rudolfPicodontetricotteri. Abbiamo impiegato questa unità poiché
 	    non siamo a conoscenza dell'unità di misura dei dati che abbiamo preso. http://nonciclopedia.wikia.com/wiki/Ventordici}
 \end{equation*}
 %
