--- a/chimica/C1/latex/obbiettivo.tex
+++ b/chimica/C1/latex/obbiettivo.tex
@@ -1,1 +1,3 @@
-\section*{Obbiettivo}
+\section*{Scopo}
+
+L'obbiettivo di qesta esperienza di laboratorio è quello di determinare la concentrazione incognita di una soluzione da titolare mediante misure di conduttimetria, in una reazione di precipitazione.
