--- a/chimica/C1/latex/relazione.tex
+++ b/chimica/C1/latex/relazione.tex
@@ -16,6 +16,7 @@
 \usepackage{wrapfig}
 \usepackage{titlesec}
 \usepackage{subcaption}
+\usepackage[version=3]{mhchem}
 
 \titlespacing\section{0pt}{10pt plus 4pt minus 4pt}{8pt plus 2pt minus 4pt}
 \titlespacing\subsection{0pt}{10pt plus 4pt minus 4pt}{8pt plus 2pt minus 4pt}
@@ -25,17 +26,17 @@
 
 \begin{center}
 
-        {\huge Titolo relazione}
+        {\huge Soluzioni elettrolitiche: titolazioni conduttimetriche}
     \vspace{0.1cm}
 
-      	{Francesco Pasa, Andrea Miani - Gruppo B11} \\
-      	{francescopasa@gmail.com - 24 febbraio 2014}
+      	{Francesco Pasa, Andrea Miani, Davide Bazzanella - Gruppo B6} \\
+      	{francescopasa@gmail.com - 26 marzo 2014}
     \vspace{-0.2cm}
 
 \end{center}
 
 \input{obbiettivo.tex}
-\input{circuito.tex}
+\input{materiale.tex}
 \input{dati_e_risultati.tex}
 \input{conclusione.tex}
 
