--- a/chimica/C1/latex/dati_e_risultati.tex
+++ b/chimica/C1/latex/dati_e_risultati.tex
@@ -1,1 +1,7 @@
 \section*{Dati e risultati}
+
+\begin{SCfigure}
+    \includegraphics[scale=0.5]{Rette_von_Fitt.pdf}
+    \caption{}
+    \label{fig:meas}
+\end{SCfigure}
