--- a/chimica/C1/latex/relazione.tex
+++ b/chimica/C1/latex/relazione.tex
@@ -29,7 +29,7 @@
         {\huge Soluzioni elettrolitiche: titolazioni conduttimetriche}
     \vspace{0.1cm}
 
-      	{Francesco Pasa, Andrea Miani, Davide Bazzanella - Gruppo B6} \\
+      	{Francesco Pasa, Andrea Miani, Davide Bazzanella - Gruppo 8 Mercoledì} \\
       	{francescopasa@gmail.com - 26 marzo 2014}
     \vspace{-0.2cm}
 
