--- a/chimica/C1/latex/obbiettivo.tex
+++ b/chimica/C1/latex/obbiettivo.tex
@@ -1,3 +1,8 @@
 \section*{Scopo}
 
-L'obbiettivo di qesta esperienza di laboratorio è quello di determinare la concentrazione incognita di una soluzione da titolare mediante misure di conduttimetria, in una reazione di precipitazione.
+L'obbiettivo di questa esperienza di laboratorio è quello di determinare la concentrazione
+di una soluzione mediante misure di conduttimetria. Per fare ciò si sfutta una reazione di
+precipitazione, mediante la quale è possibile sostituire gli elettroliti della soluzione
+a concentrazione incognita con altri ioni (nel nostro caso abbiamo sostituito \ce{Ag^+} con \ce{Na^+}),
+che hanno una conducibilità diversa. In questo modo, misurando la conducibilità, si può
+estrapolare la quantità di elettroliti originari e quindi la concentrazione.
