--- a/chimica/C1/latex/materiale.tex
+++ b/chimica/C1/latex/materiale.tex
@@ -42,5 +42,7 @@ Conoscendo il volume della soluzione titolante necessaria per arrivare al punto 
 di NaCl, si può risalire alla quantità di \ce{AgNO3} in soluzione e calcolare la concentrazione.
 
 L'incertezza standard sul volume della soluzione titolanda (nel becker) è stata posta a 0.3 mL, mentre con la
-buretta l'incertezza standard è di 0.03 mL. Per ottenere l'incertezza sul volume versato, che è la differenza tra due volumi,
+buretta l'incertezza standard è di 0.03 mL. Per ottenere l'errore sul volume versato, che è la differenza tra due volumi,
 occore comporre le incertezze. L'incertezza sul volume versato è quindi di 0.04 mL.
+
+L'incertezza sui valori di conduttanza è sempre l'errore tipo, che per il nostro conduttimetro vale \SI{0.003}{\micro\siemens}.
