--- a/chimica/C1/latex/conclusione.tex
+++ b/chimica/C1/latex/conclusione.tex
@@ -1,1 +1,17 @@
 \section*{Conclusione}
+
+Come già sottolineato in precedenza, abbiamo avuto dei problemi con la seconda regressione lineare.
+Infatti l'andamento della conducibilità che abbiamo registrato non è del tutto lineare. La legge che descrive
+la conducibilità in funzione della concentrazione, la legge di Kohlrausch, non è lineare ma ha un andamento di una radice quadrata.
+Occorre evidenziare che noi abbiamo variato la concentrazione in modo non lineare, poichè abbiamo aggiunto volume di
+soluzione a concentrazione costante ad un altra soluzione. Questo fatto può spiegare come mai l'andamento è quasi lineare.
+
+Nell'analisi dati abbiamo preferito conservare tutti i dati misurati e aggiustare le incertezze. Tuttavia un altro approccio
+sarebbe possibile: rimuovere gli ultimi dati che costringono la retta a diventare più piana. Abbiamo quindi fatto un piccolo esperimento:
+sono stati scartati tutti i dati al di sopra di 15 ml ed è stato eseguita una regressione. In questo caso il punto di inversione
+è risultato molto vicino ai 6 ml. È stato comunque necessario aggiustare le incertezze, ma questa volta l'errore sulla conducibilità corretto
+era di circa 0.09 mS, un valore molto più accettabile dei 0.3 mS del caso con tutti i dati. Con questo metodo la concentrazione incognita
+ha assunto il valore di 0.091 M. 
+
+Concludendo, possiamo affermare che il risultato ottenuto è sicuramente sottostimato, soprattutto l'incertezza. Possiamo però dire con
+sufficiente sicurezza che la concentrazione incognita è compresa tra 0.085 M e 0.095 M. 
