--- a/chimica/C1/latex/materiale.tex
+++ b/chimica/C1/latex/materiale.tex
@@ -17,16 +17,16 @@
 Come prima cosa, abbiamo tarato il conduttimetro seguendo la procedura descritta nel manuale e utilizzando
 le soluzioni 0.1 M e 0.01 M di \ce{KCl} a nostra dispozisione. Abbiamo quindi pulito la cella conduttimetrica per evitare contaminazioni.
 
-In seguito, abbiamo preparato 50 mL di soluzione titolante 1.5 M di \ce{NaCl}. Abbiamo considerato un
-incertezza standard\footnote{L'incertezza standard è uguale all'incertezza di risoluzione divisa per $\sqrt{3}$.} sul volume di 0.3 mL 
-(si è ritenuto che il matraccio usato avesse un incertezza di risoluzione di 0.5 mL)
+In seguito, abbiamo preparato 50 ml di soluzione titolante 1.5 M di \ce{NaCl}. Abbiamo considerato un
+incertezza standard\footnote{L'incertezza standard è uguale all'incertezza di risoluzione divisa per $\sqrt{3}$.} sul volume di 0.3 ml 
+(si è ritenuto che il matraccio usato avesse un incertezza di risoluzione di 0.5 ml)
 e sul peso di 0.003 g (era possibile leggere i centesimi di grammo mentre i millesimi fluttuavano, in questo caso abbiamo posto l'errore di risoluzione a 0.005 g).
 Usando queste incertezze tipo, si ottiene che la soluzione titolante aveva una concentrazione $1.50 \pm 0.03$ M.
 
 Abbiamo lavato la buretta con la soluzione per evitare diluizioni non volute. La buretta è stata riempita con
-la soluzione rimanente ed è stata posta sopra il becker contenente 100 mL di soluzione titolanda a concentrazione incognita.
+la soluzione rimanente ed è stata posta sopra il becker contenente 100 ml di soluzione titolanda a concentrazione incognita.
 Misurando ogni volta la concentrazione con il conduttimetro, la titolante è stata versata nella soluzione di \ce{AgNO3}
-a passi di 0.5 mL. In questo modo avviene la seguente reazione di precipitazione:
+a passi di 0.5 ml. In questo modo avviene la seguente reazione di precipitazione:
 
 \begin{equation*}
         \ce{AgNO3\ped{(aq)} + NaCl\ped{(aq)} -> AgCl\ped{(s)} v + NaNO3\ped{(aq)}}
@@ -41,8 +41,8 @@ per cui il trend si inverte.
 Conoscendo il volume della soluzione titolante necessaria per arrivare al punto di inversione, e quindi il numero di moli
 di NaCl, si può risalire alla quantità di \ce{AgNO3} in soluzione e calcolare la concentrazione.
 
-L'incertezza standard sul volume della soluzione titolanda (nel becker) è stata posta a 0.3 mL, mentre con la
-buretta l'incertezza standard è di 0.03 mL. Per ottenere l'errore sul volume versato, che è la differenza tra due volumi,
-occore comporre le incertezze. L'incertezza sul volume versato è quindi di 0.04 mL.
+L'incertezza standard sul volume della soluzione titolanda (nel becker) è stata posta a 0.3 ml, mentre con la
+buretta l'incertezza standard è di 0.03 ml. Per ottenere l'errore sul volume versato, che è la differenza tra due volumi,
+occore comporre le incertezze. L'incertezza sul volume versato è quindi di 0.04 ml.
 
 L'incertezza sui valori di conduttanza è sempre l'errore tipo, che per il nostro conduttimetro vale \SI{0.003}{\micro\siemens}.
